[package]
name = "NetDelay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
lazy_static = "1.4.0"
cpu-time = "1.0"
log = "0.4.14"
anyhow = "1.0.41"
log4rs = "1.0.0"
log4rs-routing-appender = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4.19"
humantime = "2.1.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_millis = "0.1.1"
bincode = "1.3.3"
